fix footer spacing

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -2,6 +2,6 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: calc(5 * var(--space));
 }
